appId: com.riccardopinato.notificationcontrol
---
- tapOn: "Home"
- assertVisible: "Notification Control"
- assertVisible: "Notification listener"
