appId: com.riccardopinato.notificationcontrol
---
- pressKey: BACK
- tapOn: "Vault"
- assertVisible: "Local Vault"
- assertVisible: "Search Vault"
