appId: com.riccardopinato.notificationcontrol
---
- tapOn: "Add rule"
- assertVisible: "Rule name"
- assertVisible: "Any app"
