appId: com.riccardopinato.notificationcontrol
---
- tapOn: "Rules"
- assertVisible: "Rules & alerts"
- assertVisible: "Add rule"
